--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
     - os: osx
       before_install:
         - launchctl setenv LIBRARY_PATH /usr/local/lib # for RocksDB
-        - HOMEBREW_NO_AUTO_UPDATE=1 brew install ccache
+        - HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALL_CLEANUP=1 brew install ccache
         - export PATH="/usr/local/opt/ccache/libexec:$PATH"
 
 install:
