--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,7 +37,7 @@ install:
 
   # use the newest versions documented here: https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
   - IF "%PLATFORM%" == "x86" SET PATH=C:\mingw-w64\i686-6.3.0-posix-dwarf-rt_v5-rev1\mingw32\bin;%PATH%
-  - IF "%PLATFORM%" == "x64" SET PATH=C:\mingw-w64\x86_64-7.3.0-posix-seh-rt_v5-rev0\mingw64\bin;%PATH%
+  - IF "%PLATFORM%" == "x64" SET PATH=C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%
 
   - MKDIR %CD%\bin
   - SET PATH=%CD%\bin;%CD%\Nim\bin;%PATH%
@@ -53,6 +53,7 @@ install:
   - IF "%PLATFORM%" == "x64" ( copy %CD%\x64\librocksdb.dll %CD%\bin\librocksdb.dll ) ELSE ( copy %CD%\x86\librocksdb.dll %CD%\bin\librocksdb.dll )
 
   # download and build lmdb
+  - DIR C:\mingw-64\
   - SET "LMDB_URL=https://github.com/LMDB/lmdb/archive"
   - SET "LMDB_VER=0.9.22"
   - SET "LMDB_ARCHIVE=LMDB_%LMDB_VER%.tar.gz"
