dump path, attempt 1

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -42,9 +42,6 @@ install:
   - MKDIR %CD%\bin
   - SET PATH=%CD%\bin;%CD%\Nim\bin;%PATH%
 
-  - systeminfo | findstr /B /C:"OS Name" /C:"OS Version"
-  - wmic os get Caption,CSDVersion /value
-
   # Unpack sqlite
   - IF not exist "%SQLITE_ARCHIVE%" appveyor DownloadFile "%SQLITE_URL%" -FileName "%SQLITE_ARCHIVE%"
   - 7z x -y "%SQLITE_ARCHIVE%" > nul
@@ -78,6 +75,7 @@ build_script:
   - bash -c "nimble install -y --depsOnly"
 
 test_script:
+  - echo %PATH%
   - nimble test
 
 deploy: off
