--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -222,7 +222,7 @@ jobs:
       - name: Build Nim and Nimble
         run: |
           curl -O -L -s -S https://raw.githubusercontent.com/status-im/nimbus-build-system/master/scripts/build_nim.sh
-          if [[ "${{ matrix.target.os }}" == "windows" && "${{ matrix.branch }}" == "mingw-longjmp-devel" ]]; then
+          if "${{ matrix.branch }}" == "mingw-longjmp-devel" ]]; then
             git clone --branch mingw-longjmp-devel --depth 1 https://github.com/status-im/Nim.git nim
           fi
           env MAKE="${MAKE_CMD} -j${ncpu}" ARCH_OVERRIDE=${PLATFORM} NIM_COMMIT=${{ matrix.branch }} \
