--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
             cpu: amd64
           #- os: windows
             #cpu: i386
-        branch: [version-1-2, version-1-4, version-1-6, devel, mingw-longjmp-devel]
+        branch: [version-1-2, version-1-4, version-1-6, devel]
         include:
           - target:
               os: linux
@@ -222,9 +222,6 @@ jobs:
       - name: Build Nim and Nimble
         run: |
           curl -O -L -s -S https://raw.githubusercontent.com/status-im/nimbus-build-system/master/scripts/build_nim.sh
-          if [[ "${{ matrix.branch }}" == "mingw-longjmp-devel" ]]; then
-            git clone --branch mingw-longjmp-devel --depth 1 https://github.com/status-im/Nim.git nim
-          fi
           env MAKE="${MAKE_CMD} -j${ncpu}" ARCH_OVERRIDE=${PLATFORM} NIM_COMMIT=${{ matrix.branch }} \
             QUICK_AND_DIRTY_COMPILER=1 QUICK_AND_DIRTY_NIMBLE=1 CC=gcc \
             bash build_nim.sh nim csources dist/nimble NimBinaries
@@ -234,7 +231,8 @@ jobs:
         run: |
           export PLATFORM="${{ matrix.target.os }}-${{ matrix.target.cpu }}"
           export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/local/lib"
-          if [[ "${{ matrix.target.os }}" == "windows" && "${{ matrix.branch }}" == "mingw-longjmp-devel" ]]; then
+          if [[ "${{ matrix.target.os }}" == "windows" ]]; then
+            # https://github.com/status-im/nimbus-eth2/issues/3121
             export NIMFLAGS="-d:nimRawSetjmp"
           fi
           nim --version
